package lotto.util

object Rule {
    const val LOTTO_PRICE = 1000
    const val MIN_NUMBER = 1
    const val MAX_NUMBER = 45
    const val NUMBERS_COUNT = 6
}